--- a/src/index.css
+++ b/src/index.css
@@ -220,4 +220,23 @@
   .animate-collapsible-up {
     animation: collapsible-up 300ms ease-out;
   }
+
+  /* Grid pattern background */
+  .bg-grid-white\/\[0\.05\] {
+    background-image: linear-gradient(
+        to right,
+        rgb(255 255 255 / 0.05) 1px,
+        transparent 1px
+      ),
+      linear-gradient(to bottom, rgb(255 255 255 / 0.05) 1px, transparent 1px);
+  }
+
+  /* Hide scrollbar for horizontal scroll */
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 }
